Saving data in firebase

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -25,19 +25,19 @@
     <!--        android:textSize="30dp"/>-->
 
     <TextView
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="63dp"
-        android:background="#9656a1"
-        android:text="                  WELCOME "
-        android:textSize="30dp" />
+    android:id="@+id/name"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="63dp"
+    android:background="#9656a1"
+    android:text="                  WELCOME "
+    android:textSize="30dp" />
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="60dp"
+        android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="160dp"
         android:layout_marginTop="150dp"
         android:ems="50"
         android:src="@drawable/human" />
@@ -48,7 +48,7 @@
         android:layout_width="98dp"
         android:layout_height="53dp"
         android:layout_marginLeft="105dp"
-        android:layout_marginTop="155dp"
+        android:layout_marginTop="250dp"
         android:text="NAME"
         android:textSize="20dp" />
 
@@ -57,7 +57,7 @@
         android:layout_width="155dp"
         android:layout_height="50dp"
         android:layout_marginLeft="220dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="250dp"
         android:text="Pr. Kaini"
         android:textSize="20dp" />
 
@@ -66,55 +66,34 @@
         android:layout_width="98dp"
         android:layout_height="53dp"
         android:layout_marginLeft="105dp"
-        android:layout_marginTop="210dp"
+        android:layout_marginTop="320dp"
         android:text="I'D"
         android:textSize="20dp" />
+
 
     <TextView
         android:id="@+id/id1"
         android:layout_width="150dp"
         android:layout_height="60dp"
         android:layout_marginLeft="220dp"
-        android:layout_marginTop="210dp"
+        android:layout_marginTop="320dp"
         android:text="MAD-1098"
         android:textSize="20dp" />
-
-    <TextView
-        android:id="@+id/subject"
-        android:layout_width="98dp"
-        android:layout_height="53dp"
-        android:layout_marginLeft="105dp"
-        android:layout_marginTop="270dp"
-        android:text="SUBJECTS"
-        android:textSize="20dp" />
-
-    <Spinner
-        android:id="@+id/spinner1"
-        android:layout_width="151dp"
-        android:layout_height="69dp"
-        android:layout_marginLeft="220dp"
-        android:layout_marginTop="270dp"
-        android:entries="@array/className"
-        android:spinnerMode="dialog" />
-
 
     <Button
         android:id="@+id/studentlistbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="450dp"
-
-
-
+        android:layout_marginTop="430dp"
         android:background="#9656a1"
-        android:text="View Student List"
+        android:text="Add Student List"
         android:textSize="20dp" />
 
     <Button
         android:id="@+id/attendanceButton"
         android:layout_width="412dp"
         android:layout_height="61dp"
-        android:layout_marginTop="520dp"
+        android:layout_marginTop="510dp"
         android:layout_marginRight="-71dp"
         android:layout_toStartOf="@+id/textview"
         android:layout_toLeftOf="@+id/textview"
@@ -122,13 +101,13 @@
         android:text="TAKE ATTENDANCE"
         android:textSize="20dp" />
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Add Student Name"
-        android:inputType="textPersonName" />
+<!--    <EditText-->
+<!--        android:id="@+id/editText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:ems="10"-->
+<!--        android:hint="Add Student Name"-->
+<!--        android:inputType="textPersonName" />-->
 
 
 </RelativeLayout>
