--- a/app/src/main/res/layout/scree2.xml
+++ b/app/src/main/res/layout/scree2.xml
@@ -19,11 +19,10 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="63dp"
+        android:layout_marginTop="58dp"
         android:background="#9656a1"
         android:text="                  WELCOME "
         android:textSize="30dp" />
-
 
 
     <Spinner
@@ -31,7 +30,7 @@
         android:layout_width="151dp"
         android:layout_height="69dp"
         android:layout_marginLeft="220dp"
-        android:layout_marginTop="330dp"
+        android:layout_marginTop="260dp"
         android:entries="@array/className"
         android:spinnerMode="dialog" />
 
@@ -39,9 +38,9 @@
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_marginTop="250dp"
         android:layout_marginLeft="220dp"
+        android:layout_marginTop="180dp"
+        android:ems="10"
         android:hint="Add Student Name"
         android:inputType="textPersonName" />
 
@@ -49,7 +48,7 @@
         android:id="@+id/studentlistbutton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="450dp"
+        android:layout_marginTop="540dp"
         android:background="#9656a1"
         android:text=" Add Student "
         android:textSize="20dp" />
@@ -58,25 +57,43 @@
         android:id="@+id/nametext"
         android:layout_width="185dp"
         android:layout_height="43dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="180dp"
         android:text="        ENTER NAME"
-        android:textSize="20dp"/>
+        android:textSize="20dp" />
+
 
     <TextView
         android:id="@+id/classtext"
         android:layout_width="185dp"
         android:layout_height="43dp"
-        android:layout_marginTop="330dp"
+        android:layout_marginTop="270dp"
         android:text="       SELECT CLASS"
-        android:textSize="20dp"/>
-
+        android:textSize="20dp" />
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginLeft="150dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="100dp"
+        android:ems="50"
+        android:gravity="center"
+        android:src="@drawable/human" />
+
+    <Button
+        android:id="@+id/createbutton"
+        android:layout_width="210dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="400dp"
+        android:text=" Create QrCode "
+        android:textSize="10dp" />
+
+    <ImageView
+        android:id="@+id/qrcode"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginLeft="220dp"
+        android:layout_marginTop="350dp"
         android:ems="50"
         android:gravity="center"
         android:src="@drawable/human" />
